# Words

./: .gitignore  README.md  setup.cfg
data/: io.github.destofr.Words.desktop
destofr_words/: GamePlayer.ui  __init__.py  __main__.py  main.css
