[metadata]
name = destofr_words
version = attr: destofr_words.VERSION
author = destofr
author_email = destofr@outlook.com
description = Word guessing game inspired by Wordle
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3+
url = https://github.com/destofr/words
project_urls =
    Bug Tracker = https://github.com/destofr/words/issues
classifiers =
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Topic :: Games/Entertainment

[options]
packages = destofr_words
install_requires =

[options.package_data]
* = *.ui, *.css

[options.data_files]
share/applications = data/io.github.destofr.Words.desktop